@@ -203,6 +203,7 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
     qmail-daned, dnstlsarr
 114.qmail-daned, qmail-remote, dnstlsarr, Makefile: Link with dossl.o
 115.smtpd.c: Fixed compilation for non-tls
+116.smtpd.c: shutdown ssl on smtp quit
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
